(#729) Random teleportation disturbs the player.
(#730) Mention control+[ANU] in mosnter recall '/' prompt.
(#733) Curse Weapon/Amrour no longer blast your objects completely, they just curse them a bit.
(#734) Stop displaying the store slot bought when purchasing.
(#735) Remove weak pseudo-ID.
(#738) Add messages for unidentified obviouslly {excellent} items.
(#740, partial #532) Color-code monster melee attacks by how dangerous they are to the current player.
(#741) Stop generating spurious staircases under the player on recall/teleport.
(#747) ui-birth.c needs to handle going directly from character sheet to sex prompt.
(#748) Allow Rings of Delving to activate.
(#755) Fix pseudo-id of branded ammo, so already-known ammo doesn't get pseudo-ID'd.
Fix bug with rods of treasure location needing ID.
Fix birth_money so that in point-based it still gives you 500AU.
Fix double-resist damage.
Fix pluralisation of 'staves'.
Add Word of Recall status to the status line.
Tone down the frequency of {excellent} items somewhat, and tweak {good} frequency.
Remove the 'K' command and instead put a prompt after the 'destroy' prompt.
Enchant Armour scrolls ID when reading them, not when they are successfully read.
Make Kavlax 'scary dark like Anclagon'.
Only wake monsters on attack if you're not "too afraid to attack".
A few fixes to the visual editor on the knowledge screens.
Make the game a little bit more borg-friendly.

Curses port:
(#666) Fix out-of-bounds memory access
(#678) Don't leave terminal colours broken on quitting
Disable ^Y on BSDs, since it clashes with roguelike keyset
Add pseudo-graphics support
Use curses to parse keys, which is more portable and removes the Escape delay.


Invisible code changes:
(#513) Refactor the code that prompts for character dump filenames so that it can be overriden by platform-native ports.
(#616) Add support for BSDish makes.
Make "make clean" remove all object files in the list, to catch files in subdirectories.