@@ -37,3 +37,8 @@ P:\xC1
 
 A:9
 P:\xF4
+
+# Backspace
+
+A:\b
+P:\xC0
